Fix module-info spam when loading, add a jar for forge patches